--- a/app/reports/jasper/anathesh_nova/naulo.jrxml
+++ b/app/reports/jasper/anathesh_nova/naulo.jrxml
@@ -5,7 +5,7 @@
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="internova_db"/>
 	<parameter name="order_loading_id" class="java.lang.String"/>
 	<queryString language="SQL">
-		<![CDATA[  select ordl.comments,  sum(asb.naulo) as naulo
+		<![CDATA[select ordl.comments,  sum(asb.naulo) as naulo
     from order_loading_assignment ol 
     join assignment_billings asb on (ol.id=asb.assignment_id)
     join orders_loading ordl on (ordl.id=ol.order_loading_id)
@@ -87,7 +87,7 @@
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["1)Όλα τα απαραίτητα έγγραφα της μεταφοράς θα αποστέλλονται με email στην διεύθυνση accounts@internovatrans.gr To μέγεθος του αρχείου δεν θα πρέπει να ξεπερνάει τα 2ΜΒ, θα πρέπει να είναι σε μορφή PDF και θα πρέπει να είναι ευανάγνωστα."]]></textFieldExpression>
+					<textFieldExpression><![CDATA["1)Όλα τα απαραίτητα έγγραφα της μεταφοράς θα αποστέλλονται με email στην διεύθυνση 1) invoicing@novafreightltd.com To μέγεθος του αρχείου δεν θα πρέπει να ξεπερνάει τα 2ΜΒ, θα πρέπει να είναι σε μορφή PDF και θα πρέπει να είναι ευανάγνωστα."]]></textFieldExpression>
 				</textField>
 				<textField>
 					<reportElement x="0" y="100" width="534" height="19" uuid="00c86212-6316-4354-9be2-5898b4cf4a6b"/>
