--- a/app/reports/jasper/anathesh_nova_eng/naulo.jrxml
+++ b/app/reports/jasper/anathesh_nova_eng/naulo.jrxml
@@ -5,7 +5,7 @@
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="internova_db"/>
 	<parameter name="order_loading_id" class="java.lang.String"/>
 	<queryString language="SQL">
-		<![CDATA[  select ordl.comments,  sum(asb.naulo) as naulo
+		<![CDATA[select ordl.comments,  sum(asb.naulo) as naulo
     from order_loading_assignment ol 
     join assignment_billings asb on (ol.id=asb.assignment_id)
     join orders_loading ordl on (ordl.id=ol.order_loading_id)
@@ -78,7 +78,7 @@
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["1)All the necessary transport documents must be in a PDF format, pure copy of it and the size do not exceed the 2MB and should be send it to the following email: accounting@internovatrans.gr"]]></textFieldExpression>
+					<textFieldExpression><![CDATA["1)All the necessary transport documents must be in a PDF format, pure copy of it and the size do not exceed the 2MB and should be send it to the following email: invoicing@novafreightltd.com"]]></textFieldExpression>
 				</textField>
 				<textField>
 					<reportElement x="0" y="100" width="534" height="19" uuid="e98af063-d621-4161-81ad-58f51cb7a769"/>
