--- a/app/reports/jasper/anathesh_eng/naulo.jrxml
+++ b/app/reports/jasper/anathesh_eng/naulo.jrxml
@@ -5,11 +5,11 @@
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="internova_db"/>
 	<parameter name="order_loading_id" class="java.lang.String"/>
 	<queryString language="SQL">
-		<![CDATA[  select ordl.comments,  sum(asb.naulo) as naulo
+		<![CDATA[select ordl.comments,  sum(asb.naulo) as naulo
     from order_loading_assignment ol 
     join assignment_billings asb on (ol.id=asb.assignment_id)
     join orders_loading ordl on (ordl.id=ol.order_loading_id)
-    where ol.order_loading_id=$P{order_loading_id}]]>
+    where ol.order_loading_id=$P{order_loading_id}   and asb.billing_id=36]]>
 	</queryString>
 	<field name="comments" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.name" value="comments"/>
